Remove SUBARCH parameter from build configurations for gs201 devices

--- a/configs/gs201.zeus-aospclang-r498229b.config.json
+++ b/configs/gs201.zeus-aospclang-r498229b.config.json
@@ -23,7 +23,6 @@
           "enableCcache": false, 
           "params": { 
             "ARCH": "arm64",
-            "SUBARCH": "arm64",
             "CC": "clang/bin/clang",
             "externalCommands": {
               "CXX": "clang/bin/clang++",
@@ -40,6 +39,7 @@
               "OBJDUMP": "clang/bin/llvm-objdump",
               "STRIP": "clang/bin/llvm-strip",
               "LD": "clang/bin/ld.lld",
+              "LD_LIBRARY_PATH": "clang/lib",
               "READELF": "clang/bin/llvm-readelf",
               "OBJSIZE": "clang/bin/llvm-size",
               "LLVM": "1",
