--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -210,10 +210,9 @@ jobs:
           echo "🤔 PATH Variable: $PATH"
 
           ARCH=$(echo $PARAMS | jq -r ".ARCH")
-          SUBARCH=$(echo $PARAMS | jq -r ".SUBARCH")
           CC=$(echo $PARAMS | jq -r ".CC")
 
-          args="-j$(nproc --all) O=${{ env.OUT_DIR }} ARCH=$ARCH SUBARCH=$SUBARCH"
+          args="-j$(nproc --all) O=${{ env.OUT_DIR }} ARCH=$ARCH"
           if [ -n "$CC" ]; then
 
             if [[ "$CC" == *"/"* ]]; then
