--- a/configs/gs201.zeus-weebxclang-19.config.json
+++ b/configs/gs201.zeus-weebxclang-19.config.json
@@ -57,6 +57,6 @@
             "enable": false,
             "branches": "gki-android13-5.10"
           },
-          "enableLXC": true        
+          "enableLXC": false        
     }
 ]
