--- a/configs/gs201.zeus-aospclang.config.json
+++ b/configs/gs201.zeus-aospclang.config.json
@@ -58,6 +58,6 @@
             "enable": false,
             "branches": "gki-android13-5.10"
           },
-          "enableLXC": true        
+          "enableLXC": false        
     }
 ]
